# lyrid

./: .gitignore  CMakeLists.txt  coding_style.md  lyrid_language.md  todo.md
include/: assembly.hpp  ast.hpp  ast_printer.h  device.hpp  global_constants.hpp  memory_annotation.hpp  parser.hpp  patch.hpp  patch_wrapper.hpp  poly_instrument.hpp  prototype.hpp  semantic_analyzer.hpp  translator.hpp  type.hpp  utility.hpp  vm.hpp  voice_parameters.hpp
include/dsp/: base_freq.hpp  constant.hpp  detune.hpp  envelope.hpp  math.hpp  mix.hpp  polynomial.hpp  volume.hpp  wave_generators.hpp
include/lyrid/: ast.h  parser.h  runtime.h
src/: device.cpp  main.cpp  parser.cpp  semantic_analyzer.cpp  translator.cpp  vm.cpp
src/lyrid_cli/: CMakeLists.txt  main.c
src/lyrid_parser/: CMakeLists.txt  ast.c  ast_builder.c  ast_builder.h  ast_printer.c  lexer.l  parser.c  parser.y
src/lyrid_parser/tests/: CMakeLists.txt  parser_tests.c
src/lyrid_runtime/: CMakeLists.txt  runtime.c
tests/: test_instruction_helper.hpp  test_instruction_helpers.hpp  test_parser.cpp  test_parser_invalid.cpp  test_parser_valid.cpp  test_semantics.cpp  test_semantics_invalid.cpp  test_semantics_valid.cpp  test_translator_codegen.cpp  test_translator_codegen_mutable_array.cpp  test_translator_codegen_simple.cpp  test_translator_constants.cpp  test_utility.cpp
